<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E4DC"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/randomHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counterHeaderView"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/randomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/randomView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomView"
        android:textColor="@color/black"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/previousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#29110C"
        android:onClick="PreviousActivity"
        android:text="@string/previousBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomView" />
</androidx.constraintlayout.widget.ConstraintLayout>